#==============================================================================

## Customizing Section: adjust the following if necessary.
##=============================================================================

AUX_SOURCE_DIRECTORY(src ui_manage_SRC)
list(SORT ui_manage_SRC)
ADD_EXECUTABLE(ui_manage ${ui_manage_SRC})
if(FROM_SOURCE)
    add_dependencies(ui_manage libssh2 jsonc openldap sasl sqlite)
endif()
INCLUDE_DIRECTORIES(inc)
INCLUDE_DIRECTORIES(${HUAWEI_PME_BMC_SOURCE_DIR}/src/include)
INCLUDE_DIRECTORIES(${HUAWEI_PME_BMC_SOURCE_DIR}/src/include/open_source)
INCLUDE_DIRECTORIES(${HUAWEI_PME_BMC_SOURCE_DIR}/../platforms/kmc/include)
INCLUDE_DIRECTORIES(${HUAWEI_PME_BMC_SOURCE_DIR}/src/include/pme_app/kmc)

INCLUDE_DIRECTORIES(${SDK_INC} ${SDK_INC_PME})
INCLUDE_DIRECTORIES(${HUAWEI_PME_BMC_SOURCE_DIR}/src/include/open_source)
INCLUDE_DIRECTORIES(${HUAWEI_PME_BMC_SOURCE_DIR}/src/include/open_source/json)
INCLUDE_DIRECTORIES(${SDK_INC}/glib-2.0)
INCLUDE_DIRECTORIES(${SDK_LIB}/glib-2.0/include)

# dalib的被动依赖
TARGET_LINK_LIBRARIES(ui_manage ${HUAWEI_PME_BMC_SOURCE_DIR}/src/lib_open_source/libnetsnmpagent.so)
TARGET_LINK_LIBRARIES(ui_manage ${HUAWEI_PME_BMC_SOURCE_DIR}/src/lib_open_source/libnetsnmphelpers.so) 
TARGET_LINK_LIBRARIES(ui_manage ${HUAWEI_PME_BMC_SOURCE_DIR}/src/lib_open_source/libnetsnmpmibs.so) 
TARGET_LINK_LIBRARIES(ui_manage ${HUAWEI_PME_BMC_SOURCE_DIR}/src/lib_open_source/libnetsnmp.so) 
TARGET_LINK_LIBRARIES(ui_manage ${HUAWEI_PME_BMC_SOURCE_DIR}/src/lib_open_source/libnetsnmptrapd.so) 
TARGET_LINK_LIBRARIES(ui_manage ${HUAWEI_PME_BMC_SOURCE_DIR}/src/lib_open_source/libpcre.so)
TARGET_LINK_LIBRARIES(ui_manage ${HUAWEI_PME_BMC_SOURCE_DIR}/src/lib_open_source/libpcrecpp.so)
TARGET_LINK_LIBRARIES(ui_manage ${HUAWEI_PME_BMC_SOURCE_DIR}/src/lib_open_source/libpcreposix.so)
TARGET_LINK_LIBRARIES(ui_manage ${HUAWEI_PME_BMC_SOURCE_DIR}/src/lib_open_source/libsqlite3.so)
TARGET_LINK_LIBRARIES(ui_manage ${HUAWEI_PME_BMC_SOURCE_DIR}/src/rootfs/usr/lib/libuip.so)
TARGET_LINK_LIBRARIES(ui_manage ${HUAWEI_PME_BMC_SOURCE_DIR}/src/rootfs/usr/lib/libsqlite3_pme.so)

# open source lib
TARGET_LINK_LIBRARIES(ui_manage ${GLIB2})
TARGET_LINK_LIBRARIES(ui_manage ${HUAWEI_PME_BMC_SOURCE_DIR}/src/rootfs/usr/lib/libdalib.so)
TARGET_LINK_LIBRARIES(ui_manage ${CRYPT})
TARGET_LINK_LIBRARIES(ui_manage ${CRYPTO})
TARGET_LINK_LIBRARIES(ui_manage ${DRIVERS})
TARGET_LINK_LIBRARIES(ui_manage ${RESOLV})
TARGET_LINK_LIBRARIES(ui_manage ${LDAP})
TARGET_LINK_LIBRARIES(ui_manage ${SECURE})

TARGET_LINK_LIBRARIES(ui_manage ${COMMON})
TARGET_LINK_LIBRARIES(ui_manage ${DFLIB})
TARGET_LINK_LIBRARIES(ui_manage ${FILE_MANAGE})
TARGET_LINK_LIBRARIES(ui_manage ${MAINT_DEBUG})
TARGET_LINK_LIBRARIES(ui_manage ${PERSISTANCE})
TARGET_LINK_LIBRARIES(ui_manage ${IPMI_COMMON})
TARGET_LINK_LIBRARIES(ui_manage ${JSON})
TARGET_LINK_LIBRARIES(ui_manage ${HUAWEI_PME_BMC_SOURCE_DIR}/src/rootfs/usr/lib/libarithmetic.so)
TARGET_LINK_LIBRARIES(ui_manage ${LBER})
TARGET_LINK_LIBRARIES(ui_manage ${SASL2})
TARGET_LINK_LIBRARIES(ui_manage ${XML_PARSER})
TARGET_LINK_LIBRARIES(ui_manage ${HASLIB})
TARGET_LINK_LIBRARIES(ui_manage ${DFLBASE})
TARGET_LINK_LIBRARIES(ui_manage ${DFRPC})
TARGET_LINK_LIBRARIES(ui_manage ${THRIFT})
TARGET_LINK_LIBRARIES(ui_manage ${MUPARSER})
TARGET_LINK_LIBRARIES(ui_manage ${PFLASH})
TARGET_LINK_LIBRARIES(ui_manage ${MAINT_DEBUG_MSG})
TARGET_LINK_LIBRARIES(ui_manage ${MAINT_DEBUG_COM})
TARGET_LINK_LIBRARIES(ui_manage ${SSH2})
TARGET_LINK_LIBRARIES(ui_manage ${HUAWEI_PME_BMC_SOURCE_DIR}/src/rootfs/usr/lib/libkmc.so)
TARGET_LINK_LIBRARIES(ui_manage ${HUAWEI_PME_BMC_SOURCE_DIR}/src/rootfs/usr/lib/libsmm_public.so)

INSTALL(TARGETS ui_manage RUNTIME DESTINATION opt/bmc/apps/legacy/ui_manage)