[workspace]
members = [
  "lua",
  "core",
  "redfish",
  "webrest",
  "portal",
]

[profile.release]
opt-level = 'z'
debug = false
codegen-units = 1
lto = true
incremental = false
panic = 'abort'
debug-assertions = false
overflow-checks = false
rpath = false

[profile.dev]
opt-level = 0
debug = 2
codegen-units = 4
lto = false
incremental = true
panic = 'unwind'
debug-assertions = true
overflow-checks = false
rpath = false

[profile.test]
opt-level = 0
debug = 2
codegen-units = 16
lto = false
incremental = true
debug-assertions = true
overflow-checks = true
rpath = false

[patch.crates-io]
tokio = { git = 'https://szv-open.codehub.huawei.com/OpenSourceCenter/tokio-rs/tokio.git', branch = 'huawei-trunk/1.20.1' }