#
# Configure file for Cmake project
#
# Author: hucheng (hucheng.hu@huawei.com)
# Date:   2013/07/02

# Description:
# This pme bmc apps source code dir.
#
#
#==============================================================================

## Customizing Section: adjust the following if necessary.
##=============================================================================

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(ipmcset)
ADD_SUBDIRECTORY(ipmcget)
