[package]
name = "lua"
version = "0.1.0"
authors = ["z00559457 <zhangjianping18@huawei.com>"]
edition = "2018"
homepage = "bindings for lua"
description = "bindings for lua"
license = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "=0.4.15" }
libc = { version = "=0.2.134" }
anyhow = "1.0.57"
serde_json = { version = "=1.0.79" }
num-traits = "0.2.15"
bytes = "1.1.0"
scoped-tls = "1.0.0"
serde = { version = "=1.0.136", features = ["derive"] }

[features]
LUA51 = []
LUA53 = []
