[package]
name = "portal"
version = "0.1.0"
authors = ["z00559457 <zhangjianping18@huawei.com>"]
edition = "2018"
homepage = "web portal for bmc"
description = "web portal for bmc"
license = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "=0.2.134" }
tokio = { version = "=1.20.1", features = ["macros", "sync"] }
serde = { version = "=1.0.136", features = ["derive"] }
warp = { version = "0.3.2", default-features = false, features = ["multipart"] }
log = { version = "=0.4.15", features = ["serde", "std"] }
redfish = { path = "../redfish" }
webrest = { path = "../webrest" }
core = { path = "../core" }
futures = { version = "=0.3.24", default-features = false, features = ["std"] }
bitflags = "1.2.1"
num_cpus = "1.13.1"
serde_json = { version = "=1.0.79" }
anyhow = "1.0.57"
itertools = "0.10.3"
once_cell = "1.10.0"
regex = { version = "=1.5.5", default-features = false, features = ["std", "unicode-perl"] }

[features]
default = ["REDFISH", "WEBREST"]
REDFISH = []
WEBREST = []
