[package]
name = "webrest"
version = "0.1.0"
authors = ["z00559457 <zhangjianping18@huawei.com>"]
edition = "2018"
homepage = "webrest api for bmc"
description = "webrest api for bmc"
license = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "=0.2.134" }
serde = { version = "=1.0.136", features = ["derive"] }
log = { version = "=0.4.15", features = ["serde", "std"] }
uuid = { version = "1.3.0", features = ["v4"] }
core = { path = "../core" }
webrest_handles = { path = "./src/control/handles" }
access_mgnt = { path = "./src/control/routes/access_mgnt" }
bmc_settings = { path = "./src/control/routes/bmc_settings" }
maintenance = { path = "./src/control/routes/maintenance" }
services = { path = "./src/control/routes/services" }
system = { path = "./src/control/routes/system" }
chassis = { path = "./src/control/routes/chassis" }
privilege = { path = "./src/control/routes/privilege" }
warp = { version = "0.3.2", default-features = false, features = ["multipart"] }
lua = { path = "../lua" }
serde_json = { version = "=1.0.79" }
bytes = "1.1.0"
anyhow = "1.0.57"
lazy_static = "1.4.0"
chrono = { version = "=0.4.22" }
headers = "0.3.7"