[package]
name = "webrest_handles"
version = "0.1.0"
authors = ["z00559457 <zhangjianping18@huawei.com>"]
edition = "2018"
homepage = "webrest api for bmc"
description = "webrest api for bmc"
license = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "=0.2.134" }
bytes = "1.1.0"
serde = { version = "=1.0.136", features = ["derive"] }
warp = { version = "0.3.2", default-features = false, features = ["multipart"] }
serde_json = { version = "=1.0.79" }
chrono = { version = "=0.4.22" }
anyhow = "1.0.57"
lazy_static = "1.4.0"
core = { path = "../../../../core" }
lua = { path = "../../../../lua" }
privilege = { path = "../routes/privilege" }
