[package]
name = "chassis"
version = "0.1.0"
authors = ["z00559457 <zhangjianping18@huawei.com>"]
edition = "2018"
homepage = "webrest api for bmc"
description = "webrest api for bmc"
license = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "=0.2.134" }
warp = { version = "0.3.2", default-features = false, features = ["multipart"] }
core = { path = "../../../../../core" }
webrest_handles = { path = "../../handles" }
privilege = { path = "../privilege" }