[package]
name = "privilege"
version = "0.1.0"
authors = ["z00559457 <zhangjianping18@huawei.com>"]
edition = "2018"
homepage = "webrest api for bmc"
description = "webrest api for bmc"
license = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3.2", default-features = false, features = ["multipart"] }
anyhow = "1.0.57"
bitflags = "1.2.1"
core = { path = "../../../../../core" }